Login System umstellen auf Speicherung
Jungs es geht, User können sich registrieren und des wird gespeichert (solange des Backend online ist)
Und die Prüfungen funktionieren auch es ist so gut

--- a/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
+++ b/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=PrototypV1
 google.books.api.key=AIzaSyAdss3RxNHwD8uG9arFV0ZYdiiUfsgZcy0
 server.http2.enabled=true
-user.properties.file=src/main/resources/user.properties
+user.properties.file=user.properties
 
