--- a/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
+++ b/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=PrototypV1
 google.books.api.key=AIzaSyAdss3RxNHwD8uG9arFV0ZYdiiUfsgZcy0
 server.http2.enabled=true
 user.properties.file=user.properties
+shelf.properties.file=shelf.properties
 
