DB Migration complete
Menge Fehler gefixt, hoffe es passt jetzt alles

--- a/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
+++ b/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.password=BE1yEbCLMjy7r2ozFRGHZaE6jHZUx0fFadiuqgW7TtVs1k15XZVwP
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
