--- a/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
+++ b/ShelfSpace-master/ShelfSpace-master/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=PrototypV1
+spring.application.name=ShelfSpace
 google.books.api.key=AIzaSyAdss3RxNHwD8uG9arFV0ZYdiiUfsgZcy0
 server.http2.enabled=true
 
